syntax = "proto3";

package auth;

option go_package = "github.com/Software-Project-Team-2/clh-auth/clh-auth/internal/pb/auth";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc ValidateToken(ValidateRequest) returns (ValidateResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message ValidateRequest {
    string token = 1;
}

message ValidateResponse {
    bool valid = 1;
}
